--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>space.leo60228</groupId>
     <artifactId>PaperApple</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1</version>
 
     <repositories>
         <repository>
@@ -27,5 +27,10 @@
             <version>1.15.2-R0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 </project>
