--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,8 @@
 name: PaperApple
-version: 1.0
+version: 1.1
 main: space.leo60228.paperapple.PaperApple
 api-version: 1.15
+commands:
+  appleskin:
+    description: Toggle AppleSkin sync
+    usage: /appleskin on|off
